Setup PRODUCT_NAME variable to replace default product name if needed

--- a/i18n/translations/it.json
+++ b/i18n/translations/it.json
@@ -1,9 +1,9 @@
 {
   "initialGreeting": "Salve",
   "enableNotificationsRequest": "Si prega di attivare le notifiche sul desktop",
-  "notificationsExplanation": "in modo che i membri del vostro team possano raggiungervi su Grape.",
+  "notificationsExplanation": "in modo che i membri del vostro team possano raggiungervi su {product}.",
   "enableNotifications": "Attivare le notifiche",
-  "connectionTrouble": "Abbiamo problemi per collegarci con Grape.",
+  "connectionTrouble": "Abbiamo problemi per collegarci con {product}.",
   "tryToReconnect": "Cercheremo di ricollegarci in",
   "reconnectSeconds": "s, oppure potete",
   "reconnectNow": "provate ora",
@@ -13,7 +13,7 @@
   "noMessageFound": "Non abbiamo trovato il messaggio che cercavate.",
   "cannotMessageYourself": "Non puo mandare messaggi a se stesso.",
   "loadingChatHistory": "Caricando lo storico della chat...",
-  "grapeTrial": "Prova Grape",
+  "productTrial": "Prova {product}",
   "continueTrial": "Continuare la prova",
   "enterDetails": "Inserisca i dettagli",
   "privateMessageHint": "(Conversazione privata)",
@@ -34,7 +34,7 @@
   "loading": "Caricamento..",
   "everyoneInvited": "Tutti sono stati invitati a questo gruppo",
   "feelsLonely": "Si sente solo qui?",
-  "noOtherMembers": "Sembra che la vostra organizzazione Grape non abbia ancora altri membri oltre a voi. Usare un messagger è più conveniente con diverse persone, quindi perché non invitare qualcuno? Non appena si iscrivono, potete tornare e iniziare una conversazione.",
+  "noOtherMembers": "Sembra che la vostra organizzazione {product} non abbia ancora altri membri oltre a voi. Usare un messagger è più conveniente con diverse persone, quindi perché non invitare qualcuno? Non appena si iscrivono, potete tornare e iniziare una conversazione.",
   "usersNotFoundFor": "Non si è trovato nessuno per",
   "inviteMembersNow": "Invita i membri ora",
   "inviteToOrganization": "Invitare una nuova persona nella vostra organizzazione",
@@ -117,7 +117,7 @@
   "pinnedMesages": "Messaggi appuntato",
   "groupInfo": "Informazioni sul gruppo",
   "userProfile": "Profilo utente",
-  "communication": "Comunicando con l'universo Grape, questo può richiedere qualche istante",
+  "communication": "Comunicando con l'universo {product}, questo può richiedere qualche istante",
   "wantToChat": "Volete comunicare?",
   "noChannelsToChatIn": "Al momento non avete persone o gruppi con cui comunicare. Unitevi a un gruppo o iniziate una nuova conversazione.",
   "joinGroup": "Aderire a un gruppo",
@@ -133,11 +133,11 @@
   "download": "scarica",
   "introHlWelcome": "Benvenuti a",
   "_introHlWelcome.comment": "Intro welcome hl.",
-  "introTextWelcome": "Grape è un'applicazione di chat per i gruppi di lavoro. Vi aiutiamo a rendere la comunicazione del vostro team più efficiente, produttiva e divertente. Se non avete già usato Grape, vi consigliamo di seguire il nostro tutorial di 90 secondi.",
+  "introTextWelcome": "{product} è un'applicazione di chat per i gruppi di lavoro. Vi aiutiamo a rendere la comunicazione del vostro team più efficiente, produttiva e divertente. Se non avete già usato {product}, vi consigliamo di seguire il nostro tutorial di 90 secondi.",
   "_introTextWelcome.comment": "Intro welcome text.",
   "introHlSearchBrowser": "Trovare i dati del vostro team",
   "_introHlSearchBrowser.comment": "Intro SearchBrowser hl.",
-  "introTextSearchBrowser": "Cercate appuntamenti, file e altre integrazioni di servizi (come Google Apps o Exchange) o navigare sul web (ad es. GIF). Per aprire Grape Search sul pulsante o premere #",
+  "introTextSearchBrowser": "Cercate appuntamenti, file e altre integrazioni di servizi (come Google Apps o Exchange) o navigare sul web (ad es. GIF). Per aprire {product} Search sul pulsante o premere #",
   "_introTextSearchBrowser.comment": "Intro SearchBrowser text.",
   "introHlManageGroups": "Gestire gruppi",
   "_introHlManageGroups.comment": "Intro data hl.",
@@ -145,7 +145,7 @@
   "_introTextGroups.comment": "Intro data text.",
   "introHlPm": "Comunicare 1 a 1",
   "_introHlPm.comment": "Intro data hl.",
-  "introTextPm": "Iniziate le conversazioni private con i vostri colleghi - anche se non hanno ancora aderito a Grape.",
+  "introTextPm": "Iniziate le conversazioni private con i vostri colleghi - anche se non hanno ancora aderito a {product}.",
   "_introTextPm.comment": "Intro data text.",
   "introHlSearch": "Rimanete produttivi",
   "_introHlSearch.comment": "Intro search hl.",
@@ -197,7 +197,7 @@
   "_linkAttachmentRemoveDialogMessage.comment": "Link attachment Remove Dialog: ask user to confirm removal.",
   "loginHl": "Si unisca alla chat!",
   "_loginHl.comment": "Embedded chat login view headline.",
-  "loginHint": "Effettuare il login per partecipare alla conversazione su Grape.",
+  "loginHint": "Effettuare il login per partecipare alla conversazione su {product}.",
   "_loginHint.comment": "Embedded chat login view hint.",
   "loginSubmit": "Accedere ora",
   "_loginSubmit.comment": "Embedded chat login view submit button.",
@@ -331,7 +331,7 @@
   "labeledMessagesSidebarTitle": "Messaggi importanti",
   "sidebarLabelInChannel": "in {channel}",
   "labeledMessagesNoContentTitle": "È qui che avviene la magia.",
-  "labeledMessagesNoContentText1": "Grape fa un riassunto automatico delle vostre conversazioni, in modo che possiate sfogliarle e trovarle in base al contesto - la chiamiamo \"intelligenza amplificata\".",
+  "labeledMessagesNoContentText1": "{product} fa un riassunto automatico delle vostre conversazioni, in modo che possiate sfogliarle e trovarle in base al contesto - la chiamiamo \"intelligenza amplificata\".",
   "labeledMessagesNoContentText2": "Scrivete alcuni Compiti o Domande per vederli apparire qui!",
   "newImportantMessages": "{amount} {amount, plural, one {nuovo messaggio importante} altri {nuovi messaggi importanti}}",
   "trainingModeHintWithLink": "IA: Questo sistema è in modalità di addestramento ({learnMoreLink})",
