--- a/i18n/translations/pl.json
+++ b/i18n/translations/pl.json
@@ -1,9 +1,9 @@
 {
   "initialGreeting": "Cześć!",
   "enableNotificationsRequest": "Włącz proszę powiadomienia na pulpicie,",
-  "notificationsExplanation": "aby członkowie Twojego zespołu mogli łatwo dotrzeć do Ciebie na Grape.",
+  "notificationsExplanation": "aby członkowie Twojego zespołu mogli łatwo dotrzeć do Ciebie na {product}.",
   "enableNotifications": "Włącz powiadomienia",
-  "connectionTrouble": "Mamy problem z połączeniem z Grape.",
+  "connectionTrouble": "Mamy problem z połączeniem z {product}.",
   "tryToReconnect": "Spróbujemy połączyć się ponownie",
   "reconnectSeconds": "albo możesz",
   "reconnectNow": "spróbuj teraz",
@@ -13,7 +13,7 @@
   "noMessageFound": "Nie mogliśmy znaleźć wiadomości, której szukałeś.",
   "cannotMessageYourself": "Nie możesz wysyłać sobie wiadomości.",
   "loadingChatHistory": "Ładowanie historii rozmów…",
-  "grapeTrial": "Grape wersja próbna",
+  "productTrial": "{product} wersja próbna",
   "continueTrial": "Kontynuuj okres próbny",
   "enterDetails": "Wprowadź szczegóły",
   "privateMessageHint": "(Prywatna korespondencja)",
@@ -34,7 +34,7 @@
   "loading": "Ładowanie…",
   "everyoneInvited": "Wszyscy zostali zaproszeni do tej grupy",
   "feelsLonely": "Czujesz się tu samotny?",
-  "noOtherMembers": "Wydaje się, że Twoja organizacja Grape nie ma jeszcze innych użytkowników niż ty. Korzystanie z komunikatora jest wygodniejsze, jeżeli korzysta z niego kilka osób, więc dlaczego nie zaprosić kogoś. Jak tylko się dołączą, możecie wrócić i rozpocząć rozmowę.",
+  "noOtherMembers": "Wydaje się, że Twoja organizacja {product} nie ma jeszcze innych użytkowników niż ty. Korzystanie z komunikatora jest wygodniejsze, jeżeli korzysta z niego kilka osób, więc dlaczego nie zaprosić kogoś. Jak tylko się dołączą, możecie wrócić i rozpocząć rozmowę.",
   "usersNotFoundFor": "Nie znaleziono nikogo dla",
   "inviteMembersNow": "Zaproś teraz użytkowników",
   "inviteToOrganization": "Zaproś nowego użytkownika do swojej organizacji",
@@ -117,7 +117,7 @@
   "pinnedMesages": "Przypięte komunikaty",
   "groupInfo": "Informacje o grupie",
   "userProfile": "Profil użytkownika",
-  "communication": "Komunikujemy się ze światem Grape, może to potrwać chwilę",
+  "communication": "Komunikujemy się ze światem {product}, może to potrwać chwilę",
   "wantToChat": "Chcesz pogadać?",
   "noChannelsToChatIn": "W tej chwili nie masz z kim porozmawiać. Dołącz do grupy lub rozpocznij nową konwersacje, aby mieć więcej zabawy.",
   "joinGroup": "Dołącz do grupy",
@@ -133,11 +133,11 @@
   "download": "pobierz",
   "introHlWelcome": "Witamy",
   "_introHlWelcome.comment": "Intro welcome hl.",
-  "introTextWelcome": "Grape to aplikacja na czacie dla zespołów. Pomożemy Ci sprawić, aby komunikacja w Twoim zespole była bardziej efektywna, produktywna i przyjemna. Jeśli jeszcze nie korzystałeś z Grape, zalecamy skorzystanie z naszego 90 sekundowego tutorialu.",
+  "introTextWelcome": "{product} to aplikacja na czacie dla zespołów. Pomożemy Ci sprawić, aby komunikacja w Twoim zespole była bardziej efektywna, produktywna i przyjemna. Jeśli jeszcze nie korzystałeś z {product}, zalecamy skorzystanie z naszego 90 sekundowego tutorialu.",
   "_introTextWelcome.comment": "Intro welcome text.",
   "introHlSearchBrowser": "Znajdź dane swojego zespołu",
   "_introHlSearchBrowser.comment": "Intro SearchBrowser hl.",
-  "introTextSearchBrowser": "Wyszukuj terminy, pliki i inne dane z integracji usług (np. Google Apps lub Exchange) lub przeglądaj strony internetowe (np. GIF-y). Aby otworzyć Grape Search kliknij przycisk lub wciśnij #",
+  "introTextSearchBrowser": "Wyszukuj terminy, pliki i inne dane z integracji usług (np. Google Apps lub Exchange) lub przeglądaj strony internetowe (np. GIF-y). Aby otworzyć {product} Search kliknij przycisk lub wciśnij #",
   "_introTextSearchBrowser.comment": "Intro SearchBrowser text.",
   "introHlManageGroups": "Zarządzaj grupami",
   "_introHlManageGroups.comment": "Intro data hl.",
@@ -145,7 +145,7 @@
   "_introTextGroups.comment": "Intro data text.",
   "introHlPm": "Przekazać jeden na jedne",
   "_introHlPm.comment": "Intro data hl.",
-  "introTextPm": "Zacznij prywatną konwersacje z kolegami - nawet jeśli jeszcze nie dołączyli do Grape.",
+  "introTextPm": "Zacznij prywatną konwersacje z kolegami - nawet jeśli jeszcze nie dołączyli do {product}.",
   "_introTextPm.comment": "Intro data text.",
   "introHlSearch": "Bądź produktywny",
   "_introHlSearch.comment": "Intro search hl.",
@@ -197,7 +197,7 @@
   "_linkAttachmentRemoveDialogMessage.comment": "Link attachment Remove Dialog: ask user to confirm removal.",
   "loginHl": "Dołącz do czatu!",
   "_loginHl.comment": "Embedded chat login view headline.",
-  "loginHint": "Proszę zaloguj się, aby dołączyć do konwersacji na Grape.",
+  "loginHint": "Proszę zaloguj się, aby dołączyć do konwersacji na {product}.",
   "_loginHint.comment": "Embedded chat login view hint.",
   "loginSubmit": "Zaloguj się teraz",
   "_loginSubmit.comment": "Embedded chat login view submit button.",
@@ -331,7 +331,7 @@
   "labeledMessagesSidebarTitle": "Ważne wiadomości",
   "sidebarLabelInChannel": "w {channel}",
   "labeledMessagesNoContentTitle": "To tutaj dzieje się magia.",
-  "labeledMessagesNoContentText1": "Grape automatycznie podsumowuje Twoje konwersacja, dzięki czemu możesz je przeglądać i odnajdywać na podstawie kontekstu - my nazywamy to \"amplified intelligence\".",
+  "labeledMessagesNoContentText1": "{product} automatycznie podsumowuje Twoje konwersacja, dzięki czemu możesz je przeglądać i odnajdywać na podstawie kontekstu - my nazywamy to \"amplified intelligence\".",
   "labeledMessagesNoContentText2": "Napisz kilka zadań lub pytań, aby zobaczyć je tutaj!",
   "newImportantMessages": "{amount} {amount, plural, one {new important message} inne {new important messages}}",
   "trainingModeHintWithLink": "IA: Ten system jest w trybie treningowym ({learnMoreLink})",
