--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -1,9 +1,9 @@
 {
   "initialGreeting": "Hey there!",
   "enableNotificationsRequest": "Please enable desktop notifications",
-  "notificationsExplanation": "so your team members can reach you on Grape.",
+  "notificationsExplanation": "so your team members can reach you on {product}.",
   "enableNotifications": "Enable notifications",
-  "connectionTrouble": "We're having trouble connecting to Grape.",
+  "connectionTrouble": "We're having trouble connecting to {product}.",
   "tryToReconnect": "We'll try to reconnect in",
   "reconnectSeconds": "s, or you can",
   "reconnectNow": "try it now",
@@ -13,7 +13,7 @@
   "noMessageFound": "We could not find the message you were looking for.",
   "cannotMessageYourself": "You can't message yourself.",
   "loadingChatHistory": "Loading your chat history…",
-  "grapeTrial": "Grape Trial",
+  "productTrial": "{product} Trial",
   "continueTrial": "Continue Trial",
   "enterDetails": "Enter Details",
   "privateMessageHint": "(Private Conversation)",
@@ -34,7 +34,7 @@
   "loading": "Loading…",
   "everyoneInvited": "Everyone has been invited to this group",
   "feelsLonely": "Feeling lonely here?",
-  "noOtherMembers": "It seems that your Grape organization has no other members than you yet. Using a messenger is more convenient with several people, so why not invite someone. As soon as they join, you can come back and start a conversation.",
+  "noOtherMembers": "It seems that your {product} organization has no other members than you yet. Using a messenger is more convenient with several people, so why not invite someone. As soon as they join, you can come back and start a conversation.",
   "usersNotFoundFor": "No one found for",
   "inviteMembersNow": "Invite members now",
   "inviteToOrganization": "Invite a new person to your organization",
@@ -117,7 +117,7 @@
   "pinnedMesages": "Pinned Messages",
   "groupInfo": "Group Info",
   "userProfile": "User Profile",
-  "communication": "Communicating with Grape universe, this may take a moment",
+  "communication": "Communicating with {product} universe, this may take a moment",
   "wantToChat": "Want to chat?",
   "noChannelsToChatIn": "You have no people or groups to chat with at the moment. Join a group or start a new conversation to have more fun.",
   "joinGroup": "Join a group",
@@ -133,11 +133,11 @@
   "download": "download",
   "introHlWelcome": "Welcome",
   "_introHlWelcome.comment": "Intro welcome hl.",
-  "introTextWelcome": "Grape is a chat application for teams. We help you to make your team communication more efficient, productive and fun. If you haven't used Grape already, we recommend you to take our 90 seconds tutorial.",
+  "introTextWelcome": "{product} is a chat application for teams. We help you to make your team communication more efficient, productive and fun. If you haven't used {product} already, we recommend you to take our 90 seconds tutorial.",
   "_introTextWelcome.comment": "Intro welcome text.",
   "introHlSearchBrowser": "Find your team data",
   "_introHlSearchBrowser.comment": "Intro SearchBrowser hl.",
-  "introTextSearchBrowser": "Search appointments, files and more from service integrations (like Google Apps or Exchange) or browse the web (e.g. GIFs). To open Grape Search click the button or press #",
+  "introTextSearchBrowser": "Search appointments, files and more from service integrations (like Google Apps or Exchange) or browse the web (e.g. GIFs). To open {product} Search click the button or press #",
   "_introTextSearchBrowser.comment": "Intro SearchBrowser text.",
   "introHlManageGroups": "Manage groups",
   "_introHlManageGroups.comment": "Intro data hl.",
@@ -145,7 +145,7 @@
   "_introTextGroups.comment": "Intro data text.",
   "introHlPm": "Communicate 1-to-1",
   "_introHlPm.comment": "Intro data hl.",
-  "introTextPm": "Start private conversations with your colleagues - even if they haven’t joined Grape yet.",
+  "introTextPm": "Start private conversations with your colleagues - even if they haven’t joined {product} yet.",
   "_introTextPm.comment": "Intro data text.",
   "introHlSearch": "Stay productive",
   "_introHlSearch.comment": "Intro search hl.",
@@ -197,7 +197,7 @@
   "_linkAttachmentRemoveDialogMessage.comment": "Link attachment Remove Dialog: ask user to confirm removal.",
   "loginHl": "Join the chat!",
   "_loginHl.comment": "Embedded chat login view headline.",
-  "loginHint": "Please log in to join the conversation on Grape.",
+  "loginHint": "Please log in to join the conversation on {product}.",
   "_loginHint.comment": "Embedded chat login view hint.",
   "loginSubmit": "Log in now",
   "_loginSubmit.comment": "Embedded chat login view submit button.",
@@ -331,7 +331,7 @@
   "labeledMessagesSidebarTitle": "Important Messages",
   "sidebarLabelInChannel": "in {channel}",
   "labeledMessagesNoContentTitle": "This is where the magic happens.",
-  "labeledMessagesNoContentText1": "Grape automatically summarizes your conversations, so you can browse and find them based on context - we call it “amplified intelligence”.",
+  "labeledMessagesNoContentText1": "{product} automatically summarizes your conversations, so you can browse and find them based on context - we call it “amplified intelligence”.",
   "labeledMessagesNoContentText2": "Write a few Tasks or Questions to see them appear here!",
   "newImportantMessages": "{amount} {amount, plural, one {new important message} other {new important messages}}",
   "trainingModeHintWithLink": "IA: This system is in training mode ({learnMoreLink})",
