--- a/i18n/translations/fr.json
+++ b/i18n/translations/fr.json
@@ -1,9 +1,9 @@
 {
   "initialGreeting": "Bonjour !",
   "enableNotificationsRequest": "Veuillez activer les notifications sur le bureau",
-  "notificationsExplanation": "afin que les membres de votre équipe puissent vous joindre sur Grape.",
+  "notificationsExplanation": "afin que les membres de votre équipe puissent vous joindre sur {product}.",
   "enableNotifications": "Activer les notifications",
-  "connectionTrouble": "Nous avons des difficultés à nous connecter à Grape.",
+  "connectionTrouble": "Nous avons des difficultés à nous connecter à {product}.",
   "tryToReconnect": "Nous essaierons de nous reconnecter dans",
   "reconnectSeconds": "s, ou vous pouvez",
   "reconnectNow": "essayez-le maintenant",
@@ -13,7 +13,7 @@
   "noMessageFound": "Nous n'avons pas trouvé le message que vous cherchiez.",
   "cannotMessageYourself": "Vous ne pouvez pas vous envoyer de message.",
   "loadingChatHistory": "Chargement de l'historique de votre chat...",
-  "grapeTrial": "Essayer Grape",
+  "productTrial": "Essayer {product}",
   "continueTrial": "Continuer à essayer",
   "enterDetails": "Entrez les détails",
   "privateMessageHint": "(Conversation privée)",
@@ -34,7 +34,7 @@
   "loading": "Chargement...",
   "everyoneInvited": "Tout le monde a été invité à ce groupe",
   "feelsLonely": "Vous vous sentez seul ici ?",
-  "noOtherMembers": "Il semble que votre organisation Grape n'ait pas encore d'autres membres que vous. L'utilisation d'un messager est plus pratique à plusieurs, alors pourquoi ne pas inviter quelqu'un. Dès qu'ils vous rejoignent, vous pouvez revenir et entamer une conversation.",
+  "noOtherMembers": "Il semble que votre organisation {product} n'ait pas encore d'autres membres que vous. L'utilisation d'un messager est plus pratique à plusieurs, alors pourquoi ne pas inviter quelqu'un. Dès qu'ils vous rejoignent, vous pouvez revenir et entamer une conversation.",
   "usersNotFoundFor": "Personne n'a été trouvé pour",
   "inviteMembersNow": "Inviter les membres maintenant",
   "inviteToOrganization": "Invitez une nouvelle personne dans votre organisation",
@@ -117,7 +117,7 @@
   "pinnedMesages": "Messages épinglés",
   "groupInfo": "Informations sur le groupe",
   "userProfile": "Profil de l'utilisateur",
-  "communication": "Connexion à l'univers de Grape, cela peut prendre un moment",
+  "communication": "Connexion à l'univers de {product}, cela peut prendre un moment",
   "wantToChat": "Envie de discuter ?",
   "noChannelsToChatIn": "Vous n'avez pas de personnes ou de groupes avec qui discuter pour le moment. Rejoignez un groupe ou entamez une nouvelle conversation pour vous amuser davantage.",
   "joinGroup": "Rejoindre un groupe",
@@ -133,11 +133,11 @@
   "download": "télécharger",
   "introHlWelcome": "Bienvenue",
   "_introHlWelcome.comment": "Intro welcome hl.",
-  "introTextWelcome": "Grape est une application de chat pour les équipes. Nous vous aidons à rendre la communication au sein de votre équipe plus efficace, plus productive et plus amusante. Si vous n'avez pas encore utilisé Grape, nous vous recommandons de suivre notre tutoriel de 90 secondes.",
+  "introTextWelcome": "{product} est une application de chat pour les équipes. Nous vous aidons à rendre la communication au sein de votre équipe plus efficace, plus productive et plus amusante. Si vous n'avez pas encore utilisé {product}, nous vous recommandons de suivre notre tutoriel de 90 secondes.",
   "_introTextWelcome.comment": "Intro welcome text.",
   "introHlSearchBrowser": "Trouvez les données de votre équipe",
   "_introHlSearchBrowser.comment": "Intro SearchBrowser hl.",
-  "introTextSearchBrowser": "Recherchez des rendez-vous, des fichiers et bien plus à partir des services d'intégrations  (comme Google Apps ou Exchange) ou naviguez sur le web (par ex. GIF). Pour ouvrir Grape Search, cliquez sur le bouton ou appuyez sur #",
+  "introTextSearchBrowser": "Recherchez des rendez-vous, des fichiers et bien plus à partir des services d'intégrations  (comme Google Apps ou Exchange) ou naviguez sur le web (par ex. GIF). Pour ouvrir {product} Search, cliquez sur le bouton ou appuyez sur #",
   "_introTextSearchBrowser.comment": "Intro SearchBrowser text.",
   "introHlManageGroups": "Gérer les groupes",
   "_introHlManageGroups.comment": "Intro data hl.",
@@ -145,7 +145,7 @@
   "_introTextGroups.comment": "Intro data text.",
   "introHlPm": "Communiquer 1 à 1",
   "_introHlPm.comment": "Intro data hl.",
-  "introTextPm": "Démarrer des conversations privées avec vos collègues - même s'ils n'ont pas encore rejoint Grape.",
+  "introTextPm": "Démarrer des conversations privées avec vos collègues - même s'ils n'ont pas encore rejoint {product}.",
   "_introTextPm.comment": "Intro data text.",
   "introHlSearch": "Rester productif",
   "_introHlSearch.comment": "Intro search hl.",
@@ -197,7 +197,7 @@
   "_linkAttachmentRemoveDialogMessage.comment": "Link attachment Remove Dialog: ask user to confirm removal.",
   "loginHl": "Rejoindre le chat !",
   "_loginHl.comment": "Embedded chat login view headline.",
-  "loginHint": "Veuillez vous connecter pour vous joindre à la conversation sur Grape.",
+  "loginHint": "Veuillez vous connecter pour vous joindre à la conversation sur {product}.",
   "_loginHint.comment": "Embedded chat login view hint.",
   "loginSubmit": "Connectez-vous maintenant",
   "_loginSubmit.comment": "Embedded chat login view submit button.",
@@ -331,7 +331,7 @@
   "labeledMessagesSidebarTitle": "Messages importants",
   "sidebarLabelInChannel": "dans {channel}",
   "labeledMessagesNoContentTitle": "C'est là que la magie opère.",
-  "labeledMessagesNoContentText1": "Grape résume automatiquement vos conversations, vous pouvez donc les parcourir et les retrouver en fonction du contexte - c'est ce que nous appelons \"l'intelligence amplifiée\".",
+  "labeledMessagesNoContentText1": "{product} résume automatiquement vos conversations, vous pouvez donc les parcourir et les retrouver en fonction du contexte - c'est ce que nous appelons \"l'intelligence amplifiée\".",
   "labeledMessagesNoContentText2": "Rédigez quelques tâches ou questions pour les voir apparaître ici !",
   "newImportantMessages": "{amount}{montant, pluriel, un {nouveau message important} autre {nouveaux messages importants}}",
   "trainingModeHintWithLink": "IA : Ce système est en mode formation ({learnMoreLink})",
