--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -60,7 +60,7 @@
   "_imageWithoutDescription.comment": "**Used when rendered inline image from markdown without description.**",
   "pinToFavorites": "Pin to Favorites",
   "_pinToFavorites.comment": "Pin to favorites tooltip text",
-  "removeFromFavorites": "Pin to Favorites",
+  "removeFromFavorites": "Remove from Favorites",
   "_removeFromFavorites.comment": "Remove from favorites tooltip text",
   "importantMessages": "Important Messages",
   "mentions": "Mentions",
