--- a/i18n/translations/pl.json
+++ b/i18n/translations/pl.json
@@ -60,7 +60,7 @@
   "_imageWithoutDescription.comment": "**Used when rendered inline image from markdown without description.**",
   "pinToFavorites": "Przypnij do ulubionych",
   "_pinToFavorites.comment": "Pin to favorites tooltip text",
-  "removeFromFavorites": "Pin to Favorites",
+  "removeFromFavorites": "Remove from Favorites",
   "_removeFromFavorites.comment": "Remove from favorites tooltip text",
   "importantMessages": "Ważne wiadomości",
   "mentions": "Wzmianki",
