LingoHub Update :rocket:
Manual push by LingoHub User: Oleh Aloshkin.
Project: Web Client

Made with :heart: by https://lingohub.com

--- a/i18n/translations/fr.json
+++ b/i18n/translations/fr.json
@@ -60,8 +60,6 @@
   "_imageWithoutDescription.comment": "**Used when rendered inline image from markdown without description.**",
   "pinToFavorites": "Ajouter aux favoris",
   "_pinToFavorites.comment": "Pin to favorites tooltip text",
-  "removeFromFavorites": "Remove from Favorites",
-  "_removeFromFavorites.comment": "Remove from favorites tooltip text",
   "importantMessages": "Messages importants",
   "mentions": "Mentions",
   "searchMessages": "Recherche de messages",
@@ -96,7 +94,7 @@
   "welcomeToGroup": "Bienvenue à {group}",
   "inviteMoreToGroup": "Inviter d'autres membres à ce groupe",
   "_inviteMoreToGroup.comment": "Group Info Panel: invite members to the group",
-  "addServiceIntegration": "Ajouter l'intégration des services",
+  "addServiceIntegration": "Ajouter une intégration de services",
   "_addServiceIntegration.comment": "Group Info Panel: link to add an integration to the current group",
   "welcomeToPm": "Conversation privée avec {partner}",
   "pmIntro": "Il s'agit d'une conversation privée entre vous et {partner}.{br}Les conversations privées ne sont accessibles qu'à vous deux.",
@@ -159,7 +157,7 @@
   "_introHlDone.comment": "Intro data hl.",
   "introTextDone": "N'oubliez pas d'ajouter le {addTeamMembersLink} et le {connectServicesLink}. Si vous avez des questions, n'hésitez pas à nous écrire !",
   "_introTextDone.comment": "Intro data text.",
-  "skipIntro": "Passer le tutoriel",
+  "skipIntro": "Passer le didacticiel",
   "_skipIntro.comment": "Intro footer skip button",
   "buttonContinue": "Continuer",
   "_buttonContinue.comment": "Intro button continue.",
@@ -237,7 +235,7 @@
   "blockquoteExample": "> Un des produits les plus cool que j'ai utilisés depuis un moment",
   "_blockquoteExample.comment": "Markdown: blockquote example",
   "markdownTipsPitch": "Comment améliorer vos messages de chat grâce à des styles astucieux",
-  "markdownTipsDialogTitle": "Conseils pour la démarque",
+  "markdownTipsDialogTitle": "Conseils pour le langage Markdown",
   "deletedMember": "Membre supprimé",
   "dateSeparatorToday": "Aujourd'hui, {date}",
   "_dateSeparatorToday.comment": "Date separator used in history, search, mentions etc.",
@@ -295,13 +293,13 @@
   "_orgSettings.comment": "Main org dropdown menu",
   "manageMembers": "Gérer les membres",
   "_manageMembers.comment": "Main org dropdown menu",
-  "addServiceIntegrations": "Ajouter des services d'intégrations",
+  "addServiceIntegrations": "Ajouter des intégrations de services",
   "_addServiceIntegrations.comment": "Main org dropdown menu",
   "accountSettings": "Paramètres du compte",
   "_accountSettings.comment": "Main org dropdown menu",
   "notificationSettings": "Paramètres de notification",
   "_notificationSettings.comment": "Main org dropdown menu",
-  "tutorial": "Tutoriel",
+  "tutorial": "Didacticiel",
   "_tutorial.comment": "Main org dropdown menu",
   "supportAndFaq": "Assistance & FAQ",
   "_supportAndFaq.comment": "Main org dropdown menu",
