LingoHub Update :rocket:
Manual push by LingoHub User: Oleh Aloshkin.
Project: Web Client

Made with :heart: by https://lingohub.com

--- a/i18n/translations/it.json
+++ b/i18n/translations/it.json
@@ -22,7 +22,7 @@
   "_groupInviteNotificationTitle.comment": "Browser notification group invite title.",
   "groupInviteNotificationContent": "{name} (Invito di gruppo)",
   "_groupInviteNotificationContent.comment": "Browser notification group invite content.",
-  "grapeCallPmInvitationContent": "vi invita a una Grape Call...",
+  "grapeCallPmInvitationContent": "vi invita a una Grape Call..",
   "_grapeCallPmInvitationContent.comment": "Browser notification for incoming pm Grape Call.",
   "grapeCallPmMissedContent": "vi ha chiamato",
   "_grapeCallPmMissedContent.comment": "Browser notification for missed pm Grape Call.",
@@ -137,7 +137,7 @@
   "_introTextWelcome.comment": "Intro welcome text.",
   "introHlSearchBrowser": "Trova i dati del team",
   "_introHlSearchBrowser.comment": "Intro SearchBrowser hl.",
-  "introTextSearchBrowser": "Cerca appuntamenti, file e altre integrazioni di servizi (come Google Apps o Exchange) o naviga sul web (ad es. GIF). Per aprire {product} Search sul pulsante o premere #",
+  "introTextSearchBrowser": "Cerca appuntamenti, file e altre integrazioni di servizi (come Google Apps o Exchange) o naviga sul web (ad es. GIF). Per aprire Grape Search sul pulsante o premere #",
   "_introTextSearchBrowser.comment": "Intro SearchBrowser text.",
   "introHlManageGroups": "Gestisci gruppi",
   "_introHlManageGroups.comment": "Intro data hl.",
