LingoHub Update :rocket:
Manual push by LingoHub User: Blerta Zeka.
Project: Web Client

Made with :heart: by https://lingohub.com

--- a/i18n/translations/de.json
+++ b/i18n/translations/de.json
@@ -60,7 +60,7 @@
   "_imageWithoutDescription.comment": "**Used when rendered inline image from markdown without description.**",
   "pinToFavorites": "Zu Favoriten hinzufügen",
   "_pinToFavorites.comment": "Pin to favorites tooltip text",
-  "removeFromFavorites": "Remove from Favorites",
+  "removeFromFavorites": "Aus Favoriten entfernen",
   "_removeFromFavorites.comment": "Remove from favorites tooltip text",
   "importantMessages": "Wichtige Nachrichten",
   "mentions": "Erwähnungen",
@@ -133,11 +133,11 @@
   "download": "Download",
   "introHlWelcome": "Willkommen",
   "_introHlWelcome.comment": "Intro welcome hl.",
-  "introTextWelcome": "{product} ist eine Messaging Lösung für Teams und hilft Ihren Mitgliedern, effizienter, unterhaltsamer und produktiver zusammenzuarbeiten.",
+  "introTextWelcome": "{product} ist eine Messaging Lösung für Teams und hilft Ihren Mitgliedern, effizienter, unterhaltsamer und produktiver zusammenzuarbeiten. Falls Sie {product} noch nicht verwendet haben, empfehlen wir Ihnen unser 90 Sekunden Tutorial.",
   "_introTextWelcome.comment": "Intro welcome text.",
   "introHlSearchBrowser": "Finden Sie Ihre Team Informationen",
   "_introHlSearchBrowser.comment": "Intro SearchBrowser hl.",
-  "introTextSearchBrowser": "Suchen Sie nach Ihren Dokumenten, Terminen und vielem mehr aus Ihren Service Integrationen (wie Google Apps oder Microsoft Sharepoint) oder durchsuchen Sie das Internet (z.B.: nach GIFs).",
+  "introTextSearchBrowser": "Suchen Sie nach Ihren Dokumenten, Terminen und vielem mehr aus Ihren Service Integrationen (wie Google Apps oder Microsoft Sharepoint) oder durchsuchen Sie das Internet (z.B.: nach GIFs).\n\nUm die Grape Search zu öffnen, klicken Sie den Knopf oder drücken Sie #",
   "_introTextSearchBrowser.comment": "Intro SearchBrowser text.",
   "introHlManageGroups": "Gruppen verwalten",
   "_introHlManageGroups.comment": "Intro data hl.",
@@ -145,7 +145,7 @@
   "_introTextGroups.comment": "Intro data text.",
   "introHlPm": "Kommunizieren Sie 1:1",
   "_introHlPm.comment": "Intro data hl.",
-  "introTextPm": "Starten Sie schnell und einfach eine Konversation mit einem Mitglied – selbst wenn er / sie sich noch nicht angemeldet hat.",
+  "introTextPm": "Starten Sie schnell und einfach Konversationen mit Ihren Kollegen - auch wenn sie sich in {product} noch nicht angemeldet haben. ",
   "_introTextPm.comment": "Intro data text.",
   "introHlSearch": "Bleiben Sie produktiv",
   "_introHlSearch.comment": "Intro search hl.",
@@ -197,7 +197,7 @@
   "_linkAttachmentRemoveDialogMessage.comment": "Link attachment Remove Dialog: ask user to confirm removal.",
   "loginHl": "Treten Sie dem Chat bei!",
   "_loginHl.comment": "Embedded chat login view headline.",
-  "loginHint": "Bitte melden Sie sich an, um an der Kommunikation teilzunehmen.",
+  "loginHint": "Bitte melden Sie sich an, um an der Kommunikation in {product} teilzunehmen.",
   "_loginHint.comment": "Embedded chat login view hint.",
   "loginSubmit": "Jetzt anmelden",
   "_loginSubmit.comment": "Embedded chat login view submit button.",
