--- a/i18n/translations/fr.json
+++ b/i18n/translations/fr.json
@@ -60,7 +60,7 @@
   "_imageWithoutDescription.comment": "**Used when rendered inline image from markdown without description.**",
   "pinToFavorites": "Ajouter aux favoris",
   "_pinToFavorites.comment": "Pin to favorites tooltip text",
-  "removeFromFavorites": "Remove from Favorites",
+  "removeFromFavorites": "Supprimer des favoris",
   "_removeFromFavorites.comment": "Remove from favorites tooltip text",
   "importantMessages": "Messages importants",
   "mentions": "Mentions",
@@ -170,7 +170,7 @@
   "inviteLink": "Ou utilisez ce lien d'invitation",
   "inviteToOrgTitle": "Invitez les membres de votre organisation",
   "inviteToOrgNote": "Invitez plusieurs membres à la fois, en séparant simplement leurs adresses e-mail par une virgule.",
-  "InviteToOrgMessage": "Vous pouvez ajouter un message personnel au courrier électronique d'invitation.",
+  "InviteToOrgMessage": "Vous pouvez ajouter un message personnel à l'e-mail d'invitation.",
   "loadingLink": "Chargement du lien en cours...",
   "_loadingLink.comment": "used in invite to org link input placeholder, while link is loading",
   "inviteToOrgError": "Entrez des adresses e-mail valides séparées par une virgule.",
@@ -369,9 +369,9 @@
   "_includeActivities.comment": "Option in messages search sidebar.",
   "mentionsSidebarTitle": "Mentions",
   "searchSidebarTitle": "Résultats de la recherche",
-  "whatIDo": "Ce que je fais",
+  "whatIDo": "Profession",
   "contactInfo": "Informations de contact",
-  "email": "Courrier électronique",
+  "email": "E-mail",
   "skype": "Skype",
   "phone": "Téléphone",
   "aboutMemberTitle": "A propos de ce membre",
