--- a/i18n/translations/it.json
+++ b/i18n/translations/it.json
@@ -60,7 +60,7 @@
   "_imageWithoutDescription.comment": "**Used when rendered inline image from markdown without description.**",
   "pinToFavorites": "Aggiungi ai preferiti",
   "_pinToFavorites.comment": "Pin to favorites tooltip text",
-  "removeFromFavorites": "Remove from Favorites",
+  "removeFromFavorites": "Rimuovi dai preferiti",
   "_removeFromFavorites.comment": "Remove from favorites tooltip text",
   "importantMessages": "Messaggi importanti",
   "mentions": "Citazioni",
@@ -169,7 +169,7 @@
   "emailAddresses": "Indirizzi e-mail",
   "inviteLink": "Oppure usa questo link di invito",
   "inviteToOrgTitle": "Invita i membri dell'organizzazione",
-  "inviteToOrgNote": "",
+  "inviteToOrgNote": "È possibile invitare più utenti contemporaneamente, basta separare i loro indirizzi e-mail con una virgola.",
   "InviteToOrgMessage": "È possibile aggiungere un messaggio personale all'e-mail di invito.",
   "loadingLink": "Caricamento del link..",
   "_loadingLink.comment": "used in invite to org link input placeholder, while link is loading",
