--- a/i18n/translations/it.json
+++ b/i18n/translations/it.json
@@ -1,17 +1,17 @@
 {
   "noEmojiFound": "Nessun emoji trovato.",
-  "enterKeywordPlaceholder": "Inserisca una parola chiave...",
-  "enterMessagePlaceholder": "Inserisca un messaggio...",
+  "enterKeywordPlaceholder": "Inserire una parola chiave...",
+  "enterMessagePlaceholder": "Inserire un messaggio...",
   "groupPostingLimitedPlaceholder": "L'invio di messaggi a questo gruppo è stato limitato.",
   "willNotifyGroup": "- informare tutti i membri di questo gruppo",
   "_willNotifyGroup.comment": "*Describe willNotifyGroup*: this string is describing action",
-  "wontNotifyGroup": "- non notifica ai membri del gruppo",
+  "wontNotifyGroup": "- non notificare ai membri del gruppo",
   "_wontNotifyGroup.comment": "*Describe wontNotifyGroup*: this string is describing action",
   "notInGroup": "non in gruppo",
   "insertAction": "Inserire nel messaggio",
-  "openAction": "Aprire",
+  "openAction": "Apri",
   "noDetailForItem": "Non ci sono informazioni dettagliate per questa voce",
-  "searchInfo": "Cercare su Wikipedia, YouTube, Giphy e {tools} cliccando {plusIcon} o premendo il tasto più sulla tastiera",
+  "searchInfo": "Cerca su Wikipedia, YouTube, Giphy e {tools} cliccando {plusIcon} o premendo il tasto + sulla tastiera",
   "yourBusinessTools": "i vostri strumenti di lavoro",
   "_yourBusinessTools.comment": "*Describe yourBusinessTools*: link used in sentence 'Search Wikipedia, Youtube, Giphy and {tools}'",
   "resultsAmountHint": "{amount} risultati",
