Language update from LingoHub 🤖
Project Name: Web Client: Grape Browser
Project Link: https://translate.lingohub.com/ubergrape-gmbh/dashboard/web-client-colon-grape-browser
User: Oleh Aloshkin

Easy language translations with LingoHub 🚀

--- a/i18n/translations/it.json
+++ b/i18n/translations/it.json
@@ -7,7 +7,7 @@
   "_willNotifyGroup.comment": "*Describe willNotifyGroup*: this string is describing action",
   "wontNotifyGroup": "- non notificare ai membri del gruppo",
   "_wontNotifyGroup.comment": "*Describe wontNotifyGroup*: this string is describing action",
-  "notInGroup": "non in gruppo",
+  "notInGroup": "non nel gruppo",
   "insertAction": "Inserire nel messaggio",
   "openAction": "Apri",
   "noDetailForItem": "Non ci sono informazioni dettagliate per questa voce",
