--- a/i18n/translations/it.json
+++ b/i18n/translations/it.json
@@ -91,10 +91,10 @@
   "_linkToAConnectedTask.comment": "NLP create task dialog link label.",
   "messageNotSentCheckConnection": "Non è stato possibile spedire il messaggio. Controllare la connessione internet e",
   "clickToTryAgain": "clicca qui per riprovare",
-  "groupIsPublic": "Questo gruppo è pubblico. Ogni membro può iscriversi e leggere la storico dei messaggi.",
+  "groupIsPublic": "Questo gruppo è pubblico. Ogni membro può iscriversi e leggere lo storico dei messaggi.",
   "groupIsPrivate": "Questo gruppo è privato. Solo i membri invitati possono vedere e partecipare a questo gruppo.",
   "welcomeToGroup": "Benvenuti a {group}",
-  "inviteMoreToGroup": "Invita più membri a questo gruppo",
+  "inviteMoreToGroup": "Invita altri membri a questo gruppo",
   "_inviteMoreToGroup.comment": "Group Info Panel: invite members to the group",
   "addServiceIntegration": "Aggiungi l'integrazione dei servizi",
   "_addServiceIntegration.comment": "Group Info Panel: link to add an integration to the current group",
@@ -112,7 +112,7 @@
   "description": "Descrizione",
   "create": "Crea",
   "enter": "Entra in",
-  "justInvited": "Congratulazioni! Ha appena invitato  {user} {amount, plural, =0 {} uno {e un altro membro} un altro {e {amount} un altro membro}}.",
+  "justInvited": "Congratulazioni! Ha appena invitato  {user} {amount, plural, =0 {} one {e un altro membro} other {e {amount} un altro membro}}.",
   "sharedFiles": "File condivisi",
   "pinnedMesages": "Messaggi appuntati",
   "groupInfo": "Informazioni sul gruppo",
@@ -220,7 +220,7 @@
   "_result.comment": "Title",
   "inlineStyles": "Stili in linea",
   "_inlineStyles.comment": "Title",
-  "inlineStylesExample": "Si può scrivere in *corsivo*, **grassetto** e in ~~barrato~~~",
+  "inlineStylesExample": "Si può scrivere in *corsivo*, **grassetto** e in ~~barrato~~",
   "_inlineStylesExample.comment": "Markdown: inline typography styles example",
   "links": "Link",
   "_links.comment": "Title",
