Language update from LingoHub 🤖
Project Name: Web Client
Project Link: https://translate.lingohub.com/ubergrape-gmbh/dashboard/web-client
User: Oleh Aloshkin

Easy language translations with LingoHub 🚀

--- a/i18n/translations/it.json
+++ b/i18n/translations/it.json
@@ -250,9 +250,9 @@
   "_copyLink.comment": "Message menu tooltip and dropdown.",
   "pinMessage": "Messaggio appuntato",
   "_pinMessage.comment": "Message menu dropdown.",
-  "unpinMessage": "Messaggio spuntato",
+  "unpinMessage": "Spunta Messaggio",
   "_unpinMessage.comment": "Message menu dropdown.",
-  "deleteMessage": "Cancella il messaggio",
+  "deleteMessage": "Cancella messaggio",
   "_deleteMessage.comment": "Message menu tooltip and dropdown.",
   "deleteAttachment": "Cancella l'allegato",
   "quoteMessage": "Cita il messaggio",
