--- a/i18n/translations/tr.json
+++ b/i18n/translations/tr.json
@@ -1,1 +1,24 @@
-{ }
+{
+  "noEmojiFound": "Emoji bulunamadı.",
+  "enterKeywordPlaceholder": "Bir anahtar kelime girin…",
+  "enterMessagePlaceholder": "Bir mesaj girin…",
+  "groupPostingLimitedPlaceholder": "Bu gruba gönderme sınırlandırılmıştır.",
+  "willNotifyGroup": "- bu gruptaki herkese bildir",
+  "_willNotifyGroup.comment": "*Describe willNotifyGroup*: this string is describing action",
+  "wontNotifyGroup": "- grup üyelerini bilgilendirmez",
+  "_wontNotifyGroup.comment": "*Describe wontNotifyGroup*: this string is describing action",
+  "notInGroup": "grupta değil",
+  "insertAction": "Mesaja ekle",
+  "openAction": "Açık",
+  "noDetailForItem": "Bu öğe için detay bilgisi yok",
+  "searchInfo": "{plusIcon} 'u tıklayarak veya klavyenizdeki artı tuşuna basarak Wikipedia, YouTube, Giphy ve {tools}' da arayın",
+  "yourBusinessTools": "iş araçlarınız",
+  "_yourBusinessTools.comment": "*Describe yourBusinessTools*: link used in sentence 'Search Wikipedia, Youtube, Giphy and {tools}'",
+  "resultsAmountHint": "{amount} sonuçları",
+  "_resultsAmountHint.comment": "Amount of results hin in the grape-search header.",
+  "noResults": "Sonuç yok.",
+  "amountResults": "{resultsAmount} {resultsAmount, plural, one {Result} other {Results}}",
+  "serviesHeadline": "hizmet seçin",
+  "_serviesHeadline.comment": "**Headline in services list of grape-browser**",
+  "noServicesFound": "Hizmet bulunamadı."
+}
