Replaced source translation

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -1,24 +1,24 @@
 {
-  "noEmojiFound": "Емодзі не знайдено.",
-  "enterKeywordPlaceholder": "Введіть ключове слово...",
-  "enterMessagePlaceholder": "Введіть повідомлення…",
-  "groupPostingLimitedPlaceholder": "Публікації в цій групі обмежені.",
-  "willNotifyGroup": "- повідомити всіх у цій групі",
+  "noEmojiFound": "No emoji found.",
+  "enterKeywordPlaceholder": "Enter a keyword…",
+  "enterMessagePlaceholder": "Enter a message…",
+  "groupPostingLimitedPlaceholder": "Posting to this group has been limited.",
+  "willNotifyGroup": "— notify everyone in this group",
   "_willNotifyGroup.comment": "*Describe willNotifyGroup*: this string is describing action",
-  "wontNotifyGroup": "- не повідомляє членів групи",
+  "wontNotifyGroup": "— does not notify group members",
   "_wontNotifyGroup.comment": "*Describe wontNotifyGroup*: this string is describing action",
-  "notInGroup": "не в групі",
-  "insertAction": "Вставити в повідомлення",
-  "openAction": "Вiдкрити",
-  "noDetailForItem": "Немає детальної інформації про цей товар",
-  "searchInfo": "Шукайте на Вiкiпедiї, YouTube, Giphy та {tools}, натискаючи на {plusIcon} або натискаючи клавішу плюса на клавіатурі",
-  "yourBusinessTools": "ваші бізнес-інструменти",
+  "notInGroup": "not in group",
+  "insertAction": "Insert into message",
+  "openAction": "Open",
+  "noDetailForItem": "No detail infos for this item",
+  "searchInfo": "Search Wikipedia, YouTube, Giphy and {tools} by clicking {plusIcon} or pressing the plus key on your keyboard",
+  "yourBusinessTools": "your business tools",
   "_yourBusinessTools.comment": "*Describe yourBusinessTools*: link used in sentence 'Search Wikipedia, Youtube, Giphy and {tools}'",
-  "resultsAmountHint": "{amount} результатів",
+  "resultsAmountHint": "{amount} results",
   "_resultsAmountHint.comment": "Amount of results hin in the grape-search header.",
-  "noResults": "Немає результатів.",
-  "amountResults": "{resultsAmount} {resultsAmount, множина, одна {Result} інша {Results}}",
-  "serviesHeadline": "виберіть послугу",
+  "noResults": "No Results.",
+  "amountResults": "{resultsAmount} {resultsAmount, plural, one {Result} other {Results}}",
+  "serviesHeadline": "select service",
   "_serviesHeadline.comment": "**Headline in services list of grape-browser**",
-  "noServicesFound": "Послуг не знайдено."
+  "noServicesFound": "No services found."
 }
